tests/wpt/tests/third_party/test262/test/language/expressions/class/elements/syntax/early-errors/grammar-special-meth-contains-super-set.js
// This file was procedurally generated from the following sources:
// - src/class-elements/grammar-special-meth-contains-super-set.case
// - src/class-elements/syntax/invalid/cls-expr-elements-invalid-syntax.template
/*---
description: Accessor set Methods cannot contain direct super (class expression)
esid: prod-ClassElement
features: [class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Class Definitions / Static Semantics: Early Errors

    ClassElement : MethodDefinition
        It is a Syntax Error if PropName of MethodDefinition is not "constructor" and HasDirectSuper of MethodDefinition is true.

---*/


$DONOTEVALUATE();

var C = class extends Function{
  set method(_) {
      super();
  }
};
